# gocardless-events

./: .gitignore  BACKWARD_COMPATIBILITY.md  CHANGELOG.md  CONTRIBUTING.md  README.md  check.py  conversion.md  generate_json.py  generate_models.py  generate_schema.py  model.py.jinja  output.json  pyproject.toml  schema.json  split_simple.py
.github/: .release-please-manifest.json
.github/workflows/: publish.yaml  test.yaml
docs/billing_request/: bank_authorisation_authorised.html  bank_authorisation_denied.html  bank_authorisation_expired.html  bank_authorisation_failed.html  bank_authorisation_visited.html  cancelled.html  choose_currency.html  collect_amount.html  collect_bank_account.html  collect_customer_details.html  created.html  failed.html  flow_created.html  flow_exited.html  flow_visited.html  fulfilled.html  payer_details_confirmed.html  payer_geo_blocked.html  select_institution.html
docs/creditor/: account_auto_frozen.html  account_auto_frozen_reverted.html  bounced_payout.html  new_payout_currency_added.html  updated.html
docs/export/: completed.html  failed.html  started.html
models/: __init__.py  billing_request.py  creditor.py  export.py  instalment_schedule.py  mandate.py  payer_authorization.py  payment.py  payout.py  refund.py  scheme_identifier.py  subscription.py
raw_data/: billing_request.html  creditor.html  export.html  instalment_schedule.html  mandate.html
scripts/: generate_models.py  generate_schema.py
templates/: __init__.py.jinja  {{ resource_name }}.py.jinja
test/: test_models.py
tests/: test_models.py
(+68 files in other folders)
